{
  "version": 4,
  "terraform_version": "1.1.8",
  "serial": 78,
  "lineage": "469d16ed-de7c-071f-fc68-cfdfa130a9b3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "lb-cluster-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:417732881703:loadbalancer/app/ALB-k8s-test-private/1dc13be680fe80a9",
            "arn_suffix": "app/ALB-k8s-test-private/1dc13be680fe80a9",
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-ALB-k8s-test-private-871344416.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:417732881703:loadbalancer/app/ALB-k8s-test-private/1dc13be680fe80a9",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ALB-k8s-test-private",
            "security_groups": [
              "sg-0fa4eb4de4aefc613"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-ec04449a"
              },
              {
                "subnet_id": "subnet-f9b3fb9d"
              }
            ],
            "subnets": [
              "subnet-ec04449a",
              "subnet-f9b3fb9d"
            ],
            "tags": {
              "Environment": "aws-test"
            },
            "tags_all": {
              "Environment": "aws-test"
            },
            "vpc_id": "vpc-024f3e66",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "aws_security_group.sg-lb-to-asg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "lb-cluster-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:417732881703:loadbalancer/app/ALB-k8s-test-public/caeadba3311f29d5",
            "arn_suffix": "app/ALB-k8s-test-public/caeadba3311f29d5",
            "desync_mitigation_mode": "defensive",
            "dns_name": "ALB-k8s-test-public-1889386990.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:417732881703:loadbalancer/app/ALB-k8s-test-public/caeadba3311f29d5",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ALB-k8s-test-public",
            "security_groups": [
              "sg-00671aef231290260",
              "sg-0fa4eb4de4aefc613"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-ec04449a"
              },
              {
                "subnet_id": "subnet-f9b3fb9d"
              }
            ],
            "subnets": [
              "subnet-ec04449a",
              "subnet-f9b3fb9d"
            ],
            "tags": {
              "Environment": "aws-test"
            },
            "tags_all": {
              "Environment": "aws-test"
            },
            "vpc_id": "vpc-024f3e66",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "aws_security_group.sg-lb-public",
            "aws_security_group.sg-lb-to-asg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-lb-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:417732881703:security-group/sg-00671aef231290260",
            "description": "http https traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SG-k8s-test-ALBPublic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00671aef231290260",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SG-k8s-test-ALBPublic",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SG-k8s-test-ALBPublic",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SG-k8s-test-ALBPublic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "SG-k8s-test-ALBPublic",
            "name_prefix": "",
            "owner_id": "417732881703",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-024f3e66"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-lb-to-asg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:417732881703:security-group/sg-0fa4eb4de4aefc613",
            "description": "lbtoK8SNodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SG-k8s-test-ALBtoNode",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "SG-k8s-test-ALBtoNode",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "id": "sg-0fa4eb4de4aefc613",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.31.0.0/16"
                ],
                "description": "SG-k8s-test-ALBtoNode",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "172.31.0.0/16"
                ],
                "description": "SG-k8s-test-ALBtoNode",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [
                  "172.31.0.0/16"
                ],
                "description": "SG-k8s-test-ALBtoNode",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "SG-k8s-test-ALBtoNode",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "SG-k8s-test-ALBtoNode",
            "name_prefix": "",
            "owner_id": "417732881703",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-024f3e66"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    }
  ]
}